--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     }
   },
   "require": {
-    "simplepie/simplepie": "^1.4"
+    "simplepie/simplepie": "^1.4",
+    "monolog/monolog": "^1.22"
   }
 }
